--- a/src/App.scss
+++ b/src/App.scss
@@ -6,5 +6,9 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto 1fr;
   grid-gap: 36px 30px;
+  &__loading {
+    grid-column: 1/-1;
+    text-align: center;
+  }
 }
 
