lazy loading , hover animation

--- a/src/components/Card.scss
+++ b/src/components/Card.scss
@@ -2,11 +2,21 @@
   &__poster {
     width: 100%;
     max-width: 100%;
+    overflow: hidden;
+    margin: 0;
+    img {
+      width: 100%;
+      max-width: 100%;
+      transition: transform .2s;
+      &:hover {
+        transform: scale(1.1);
+      }
+    }
   }
   &__headline {
     font-size: 16pt;
     margin: 16px 0 0;
-    color: #ffffff;
+    color: var(--white);
     font-weight: normal;
   }
 }
