--- a/src/index.scss
+++ b/src/index.scss
@@ -6,14 +6,9 @@
   --primary-font: 'Titillium Web', sans-serif;
 
   // color vriables
-   --brand-color: #1b7cf8;
-   --bg-color: #eeeeee;
-   --text-black: #211f1f;
+   --text-black: #171717;
    --white: #ffffff;
-   --text-gray: #9f9f9f;
-   --black-1: #1e2022;
 
-   --red: #de4437;
 }
 
 * {
