--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -4,11 +4,24 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 16px;
+  box-shadow: 0px 15px 8px 0px rgba(23,23,23,1);
+  position: relative;
+
+  &:after {
+    content: "";
+    box-shadow: 0px 12px 8px 0px #171717;
+    width: 100%;
+    height: 30px;
+    left: 0;
+    right: 0;
+    top: 100%;
+    position: absolute;
+  }
 
   &__headline-wrap {
     font-size: 24pt;
     font-weight: 600;
-    color: #ffffff;
+    color: var(--white);
     display: flex;
     margin: 0;
   }
